<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rastreabilidadeInterna.centrodedistribuicao.ActivityControleDeEstoqueCD">

    <item android:id="@+id/action_relatorio" android:title="@string/action_relatorio"
        android:orderInCategory="100" android:showAsAction="ifRoom" />

    <item android:id="@+id/action_testes" android:title="@string/action_testes"
        android:orderInCategory="100" android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_Logout"
        android:title="Logout"
        android:showAsAction="ifRoom"
        />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
